--- a/StudentsWebApplication/Content/students-styles.css
+++ b/StudentsWebApplication/Content/students-styles.css
@@ -1,12 +1,11 @@
 ﻿body {
-    padding-top: 40px;
     background-color: #eee;
 }
 
 .div-right {
     position:relative;
     right:0px;
-    left:33%;
+    left:30%;
     text-align: right;
 }
 
@@ -14,4 +13,21 @@
     position:relative;
     left:0px;
     text-align: left;
+}
+
+.div-style {  
+    background-color: #f7f7f7;
+    border-radius:6px; 
+    -webkit-border-radius:6px; 
+    -moz-border-radius:6px; 
+    margin:15px;
+    padding:10px;
+}
+
+.div-background-style {
+    background-color: rgba(101, 101, 101, 0.73);
+    visibility:hidden;
+    width:100%;
+    height:100%;
+    position:absolute;
 }
