--- a/StudentsWebApplication/Content/students-styles.css
+++ b/StudentsWebApplication/Content/students-styles.css
@@ -29,5 +29,16 @@
     visibility:hidden;
     width:100%;
     height:100%;
-    position:absolute;
+    position:fixed;
+}
+
+.div-editor-style {
+    position:fixed;
+    /*width:500px;*/
+    width:50%;
+    height:225px;
+    padding:15px;
+    cursor: pointer;
+    top: 100px;
+    left: 25%;
 }
